syntax = "proto3";

package netsvr.topicCountResp;

option go_package = "internal/protocol;protocol";

//worker响应business，返回网关中的主题数量
message TopicCountResp {
  //worker原样回传给business
  bytes ctxData = 1;
  int32 count = 2;
}